<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditorActivity"
    android:padding="@dimen/parent_activity_margin"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/book_container"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/book_name_field"/>
        <EditText
            android:id="@+id/name_field"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:inputType="textCapWords"
            android:hint="@string/name_hint"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/price_container"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/price_field"/>
        <EditText
            android:id="@+id/price_field"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:inputType="number"
            android:hint="@string/price_hint"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/quantity_container"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/quantity_field"/>
        <EditText
            android:id="@+id/quantity_field"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:inputType="number"
            android:hint="@string/quantity_hint"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/supplier_container"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal" >
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/supplier_field"
            android:paddingTop="10dp"/>
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">
            <EditText
                android:id="@+id/supplier_name_field"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:inputType="textCapWords"
                android:hint="@string/supplier_hint"/>
            <EditText
                android:id="@+id/supplier_phone"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:inputType="number"
                android:hint="@string/supplier_phone_hint"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>